[gd_scene load_steps=22 format=3 uid="uid://bbwenmdqnatkb"]

[ext_resource type="Script" uid="uid://dv4bxtgjv0ecc" path="res://Levels/main.gd" id="1_1ce2o"]
[ext_resource type="PackedScene" uid="uid://btv7jq1mwn3vw" path="res://Physical Objects/Walls/wall.tscn" id="1_mktae"]
[ext_resource type="Texture2D" uid="uid://b8plesryuq8fw" path="res://Assets/icon.svg" id="2_3lhg3"]
[ext_resource type="Shader" uid="uid://bxa05wnlbl06a" path="res://Levels/main.gdshader" id="2_5mxy1"]
[ext_resource type="PackedScene" uid="uid://bq8265toxmcqh" path="res://Physical Objects/Balls/ball.tscn" id="2_xotb5"]
[ext_resource type="PackedScene" uid="uid://cw52elds5h8mr" path="res://Physical Objects/Paddles/paddle.tscn" id="3_vgts4"]
[ext_resource type="Script" uid="uid://dheb1wemo2es6" path="res://Physical Objects/Kill Zones/kill_zone_controller.gd" id="5_d766w"]
[ext_resource type="PackedScene" uid="uid://bpmk1aisafyh6" path="res://HUD/hud.tscn" id="5_y4mhn"]
[ext_resource type="Script" uid="uid://cml6lxpmos57v" path="res://Physical Objects/Balls/ball_controller.gd" id="6_08rsg"]
[ext_resource type="PackedScene" uid="uid://bal10sqwhvuwn" path="res://Physical Objects/Bricks/brick.tscn" id="6_o8ws1"]
[ext_resource type="Script" uid="uid://dp6uvfvt1aokm" path="res://Physical Objects/Bricks/brick_controller.gd" id="8_hqcrn"]
[ext_resource type="Script" uid="uid://dp8si1p2uu3l5" path="res://Modifications/item_controller.gd" id="11_0qyvt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgfyn"]

[sub_resource type="Gradient" id="Gradient_hilkn"]
offsets = PackedFloat32Array(0.0983607, 0.180328, 0.245902, 0.289617, 0.387978, 0.486339)
colors = PackedColorArray(0, 0, 0.25098, 0.796078, 0, 0, 1, 1, 0, 0, 0.462745, 1, 0.181218, 1.66532e-05, 0.726595, 1, 0.220617, 0.119153, 0.596779, 1, 0, 0, 0.964706, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hilkn"]
noise_type = 0
frequency = 0.0009

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_hilkn"]
color_ramp = SubResource("Gradient_hilkn")
noise = SubResource("FastNoiseLite_hilkn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3lhg3"]
shader = ExtResource("2_5mxy1")
shader_parameter/snes_transparency = true
shader_parameter/gba_transparency = true
shader_parameter/horizontal_scan_line = false
shader_parameter/vertical_scan_line = false
shader_parameter/enable_palette_cycling = true
shader_parameter/sprite_scroll_direction = Vector2(-1, -1)
shader_parameter/sprite_scroll_speed = 0.1
shader_parameter/gba_transparency_scroll_direction = Vector2(1, 1)
shader_parameter/gba_transparency_scroll_speed = 0.5
shader_parameter/gba_transparency_value = 0.35
shader_parameter/horizontal_wave_amplitude = 0.01
shader_parameter/horizontal_wave_frequency = 0.01
shader_parameter/horizontal_wave_speed = 1.0
shader_parameter/vertical_wave_amplitude = 0.01
shader_parameter/vertical_wave_frequency = 0.01
shader_parameter/vertical_wave_speed = 1.0
shader_parameter/horizontal_deform_amplitude = 0.01
shader_parameter/horizontal_deform_frequency = 0.01
shader_parameter/horizontal_deform_speed = 1.0
shader_parameter/vertical_deform_amplitude = 0.01
shader_parameter/vertical_deform_frequency = 0.01
shader_parameter/vertical_deform_speed = 1.0
shader_parameter/palette_cycling_speed = 0.1
shader_parameter/palette = SubResource("NoiseTexture2D_hilkn")

[sub_resource type="Gradient" id="Gradient_5mxy1"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3lhg3"]
seed = 7576
frequency = 0.0068
fractal_type = 2
fractal_octaves = 2
fractal_lacunarity = 6.345
fractal_gain = 0.375
fractal_weighted_strength = 0.27
domain_warp_enabled = true
domain_warp_type = 1
domain_warp_amplitude = 2.0
domain_warp_frequency = 0.19
domain_warp_fractal_lacunarity = 2.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_wgfyn"]
seamless = true
color_ramp = SubResource("Gradient_5mxy1")
noise = SubResource("FastNoiseLite_3lhg3")

[sub_resource type="AudioStream" id="AudioStream_hilkn"]

[node name="Level" type="Node"]
script = ExtResource("1_1ce2o")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(360, 48)
texture_normal = ExtResource("2_3lhg3")
shape = SubResource("RectangleShape2D_wgfyn")
action = "launch"

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.0445579, 0.0445578, 0.0445578, 1)
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_3lhg3")
offset_left = 880.0
offset_top = -320.0
offset_right = 4720.0
offset_bottom = 1760.0
rotation = 1.57079
scale = Vector2(0.525143, 0.525143)
texture = SubResource("NoiseTexture2D_wgfyn")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Wall" parent="." instance=ExtResource("1_mktae")]

[node name="Paddle" parent="." instance=ExtResource("3_vgts4")]
position = Vector2(352, 1248)
speed = 800

[node name="KillZones" type="Node" parent="."]
script = ExtResource("5_d766w")

[node name="Balls" type="Node" parent="."]
script = ExtResource("6_08rsg")
ball_scene = ExtResource("2_xotb5")

[node name="Bricks" type="Node" parent="."]
script = ExtResource("8_hqcrn")
brick_scene = ExtResource("6_o8ws1")

[node name="Loot" type="Node" parent="."]
script = ExtResource("11_0qyvt")

[node name="HUD" parent="." instance=ExtResource("5_y4mhn")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStream_hilkn")
volume_db = 5.0

[connection signal="add_point" from="." to="HUD" method="_on_main_add_point"]
[connection signal="control_state" from="." to="Paddle" method="_on_main_control_state"]
[connection signal="game_lost" from="." to="HUD" method="_on_main_game_lost"]
[connection signal="game_start" from="." to="Paddle" method="_on_main_game_start"]
[connection signal="game_start" from="." to="Balls" method="_on_main_game_start"]
[connection signal="game_start" from="." to="Bricks" method="_on_main_game_start"]
[connection signal="game_win" from="." to="HUD" method="_on_main_game_win"]
[connection signal="intro_start" from="." to="HUD" method="_on_main_intro_start"]
[connection signal="reset_game" from="." to="Paddle" method="_on_main_reset_game"]
[connection signal="reset_game" from="." to="Balls" method="_on_main_reset_game"]
[connection signal="reset_game" from="." to="Bricks" method="_on_main_reset_game"]
[connection signal="reset_game" from="." to="Loot" method="_on_main_reset_game"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="paddle_position" from="Paddle" to="Balls" method="_on_paddle_paddle_position"]
[connection signal="kill_area_entered" from="KillZones" to="Balls" method="_on_kill_zones_kill_area_entered"]
[connection signal="ball_count" from="Balls" to="." method="_on_balls_ball_count"]
[connection signal="brick_broken" from="Bricks" to="." method="_on_bricks_brick_broken"]
[connection signal="brick_broken" from="Bricks" to="Loot" method="_on_bricks_brick_broken"]
[connection signal="brick_broken" from="Bricks" to="HUD" method="_on_bricks_brick_broken"]
[connection signal="brick_count" from="Bricks" to="." method="_on_bricks_brick_count"]
[connection signal="loot_area_entered" from="Loot" to="Balls" method="_on_loot_loot_area_entered"]
[connection signal="loot_area_entered" from="Loot" to="HUD" method="_on_loot_loot_area_entered"]
[connection signal="control_state" from="HUD" to="." method="_on_hud_control_state"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
